@@ -93,6 +93,28 @@ def test_files():
     assert status == '200 OK'
     assert ('Content-type', 'text/html') in headers
 
+def test_text():
+    environ = {}
+    environ['PATH_INFO'] = '/text/test.txt'
+    environ['REQUEST_METHOD'] = 'GET'
+    environ['QUERY_STRING'] = ''
+    environ['CONTENT_TYPE'] = 'text/html'
+
+    d = {}
+    def test_start_response(s, h, return_in=d):
+        d['status'] = s
+        d['headers'] = h
+
+    test_app = app.MyApp()
+    results = test_app(environ, test_start_response)
+
+    text = "".join(results)
+    status, headers = d['status'], d['headers']
+    
+    assert text.find('This is a text file') != -1, text
+    assert status == '200 OK'
+    assert ('Content-type', 'text/plain') in headers
+
 def test_images():
     environ = {}
     environ['PATH_INFO'] = '/images'
@@ -111,9 +133,30 @@ def test_images():
     text = "".join(results)
     status, headers = d['status'], d['headers']
     
-    assert text.find('images') != -1, text
+    assert text.find('Images') != -1, text
     assert status == '200 OK'
     assert ('Content-type', 'text/html') in headers
+
+def test_pics():
+    environ = {}
+    environ['PATH_INFO'] = '/pics/chrome.png'
+    environ['REQUEST_METHOD'] = 'GET'
+    environ['QUERY_STRING'] = ''
+    environ['CONTENT_TYPE'] = 'text/html'
+
+    d = {}
+    def test_start_response(s, h, return_in=d):
+        d['status'] = s
+        d['headers'] = h
+
+    test_app = app.MyApp()
+    results = test_app(environ, test_start_response)
+
+    text = "".join(results)
+    status, headers = d['status'], d['headers']
+    
+    assert status == '200 OK'
+    assert ('Content-type', 'image/png') in headers
 
 def test_form():
     environ = {}
