@@ -71,3 +71,8 @@
  * file: Added the file folder with some test files
  * images: Added the images folder with some test files
 
+2014-02-21  Jason Lefler <leflerja@arctic.cse.msu.edu>
+
+ * server.py: Added the WSGI validation
+ * test_app.py: Added tests for the new text file and image stuff
+
